<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.alexos.heartstonecardsinfo.presentation.viewmodel.CardInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.CardInfoFragment">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="80dp"
            app:cardImage="@{viewModel.cardInfoItem.img}"
            app:layout_constraintBottom_toTopOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="ContentDescription"
            tools:src="@drawable/no_image_svgrepo_com" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@{viewModel.cardInfoItem.name}"
            app:layout_constraintBottom_toTopOf="@id/tv_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_photo"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/tv_name">

        </TextView>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp"
            android:text="@{viewModel.cardInfoItem.type}"
            app:layout_constraintBottom_toTopOf="@+id/tv_class"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="@string/tv_type">

        </TextView>

        <TextView
            android:id="@+id/tv_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp"
            android:text="@{viewModel.cardInfoItem.playerClass}"
            app:layout_constraintBottom_toTopOf="@+id/tv_flavor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_type"
            tools:text="@string/tv_class">

        </TextView>

        <TextView
            android:id="@+id/tv_flavor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="14sp"
            app:bindFlavor="@{viewModel.cardInfoItem.flavor}"
            app:layout_constraintBottom_toTopOf="@+id/ok_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_class"
            tools:text="@string/tv_Flavor">

        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>